<resources>
    <string name="app_name">CodeChallenges4</string>
    <string name="code_challenges_4">Code challenges 4!</string>
    <string name="challenge_number_1">Challenge number 1</string>
    <string name="challenge_number_2">Challenge number 2</string>
    <string name="challenge_number_3">Challenge number 3</string>
    <string name="challenge_number_4">Challenge number 4</string>
    <string name="button_to_another_activity">Button to another activity</string>
    <string name="challenge_no_1">Challenge No. 1</string>
    <string name="button_to_first_challenge_activity">Button to first challenge</string>
    <string name="another_activity">Another activity</string>
</resources>