<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_text_view_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium_main_30"
        android:text="@string/code_challenges_4"
        android:textSize="@dimen/text_size_medium_main_30"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_main_to_first_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_extra_large_main_100"
        android:background="@color/light_teal"
        android:text="@string/challenge_number_1"
        app:layout_constraintBottom_toTopOf="@id/button_main_to_second_activity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text_view_main"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/button_main_to_second_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_extra_large_main_100"
        android:background="@color/light_teal"
        android:text="@string/challenge_number_2"
        app:layout_constraintBottom_toTopOf="@id/button_main_to_third_activity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_main_to_first_activity"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/button_main_to_third_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_extra_large_main_100"
        android:background="@color/light_teal"
        android:text="@string/challenge_number_3"
        app:layout_constraintBottom_toTopOf="@id/button_main_to_forth_activity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_main_to_second_activity"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/button_main_to_forth_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_extra_large_main_100"
        android:background="@color/light_teal"
        android:text="@string/challenge_number_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_main_to_third_activity"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>